<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:id="@+id/log_bolus_activity_food_list_item">

    <ImageView
        app:srcCompat="@drawable/circle"
        android:id="@+id/log_bolus_activity_food_list_item_icon"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="72dp"
        android:layout_height="72dp" />

    <EditText
        android:layout_width="217dp"
        android:layout_height="44dp"
        android:inputType="textAutoComplete"
        android:text=""
        android:hint="@string/log_bolus_activity_food_list_item_food_name_placeholder"
        android:ems="10"
        android:id="@+id/log_bolus_activity_food_list_item_food_name"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/log_bolus_activity_food_list_item_icon"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_height="45dp"
        android:inputType="number"
        android:text=""
        android:hint="@string/log_bolus_activity_food_list_item_carb_placeholder"
        android:ems="10"
        android:id="@+id/log_bolus_activity_food_list_item_carb"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="96dp"
        app:layout_constraintRight_toLeftOf="@id/log_bolus_activity_food_list_item_insulin"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/log_bolus_activity_food_list_item_food_name"
        app:layout_constraintLeft_toLeftOf="@id/log_bolus_activity_food_list_item_food_name"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/log_bolus_activity_food_list_item_insulin_placeholder"
        android:ems="10"
        android:id="@+id/log_bolus_activity_food_list_item_insulin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/log_bolus_activity_food_list_item_food_name"
        android:layout_width="96dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/log_bolus_activity_food_list_item_food_name" />
</android.support.constraint.ConstraintLayout>